adding swagger documenattion to Auth endpoints
